<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sec_screen_bg"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/btnCont"
        android:layout_width="379dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/btn_continue"
        android:text="@string/btnContinue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/btn_type"
        android:text="@string/anxiety"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_type"
        android:textAllCaps="false"
        android:text="@string/stress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:textAllCaps="false"
        android:background="@drawable/btn_type"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/esteem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:background="@drawable/btn_type"
        android:layout_height="52dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sleep"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:background="@drawable/btn_type"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:text="@string/happines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_type"
        android:text="@string/productivity"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/what_brings"
        android:textColor="@color/textcolorfirst"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/we_recognize"
        android:textColor="@color/textcolor"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>