<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="145dp"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/textcolorfirst"
        android:text="@string/personalize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/indicatorPerson"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="155dp"
        app:indicatorName="BallSpinFadeLoaderIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUniq" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/heatlh"
        android:textColor="@color/textcolorfirst"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="371dp"
        android:textColor="@color/textcolorfirst"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="52dp"
        android:text="@string/analyze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUniq"
        android:layout_width="171dp"
        android:layout_height="71dp"
        android:layout_marginTop="296dp"
        android:visibility="invisible"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        android:text="@string/unique"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNature"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/over_100_original_nature_sounds_you_can_mix_however_you_want"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorPerson" />

    <TextView
        android:id="@+id/tvMeassure"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/measure_your_stress_level_get_content_recommendations_based_on_energy_and_stress_levels"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNature" />
</androidx.constraintlayout.widget.ConstraintLayout>